Change Hierachy Of Skill and Change Ship Movement By Physics

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -18,7 +18,11 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="ToggleBarrier",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill1",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill2",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill3",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill4",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill5",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="ForwardAndBackward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="LeftAndRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="ForwardAndBackward",Key=S,Scale=-1.000000)
