Skill System and Auto Weapon system Development finish

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -23,6 +23,16 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Skill3",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill4",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill5",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill6",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Skill7",Key=Five,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto1",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto2",Key=F2,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto3",Key=F3,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto4",Key=F4,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto5",Key=F5,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto6",Key=F6,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto7",Key=F7,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponInAuto8",Key=F8,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="ForwardAndBackward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="LeftAndRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="ForwardAndBackward",Key=S,Scale=-1.000000)
