커밋 싱크 맞추기

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,8 +38,7 @@ DoubleClickTime=0.200000
 -ActionMappings=(ActionName="ToggleWeaponInWeapon",Key=F11,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ToggleWeaponInWeapon",Key=F12,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ToggleMouse",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Interaction",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="InteractionCancel",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="GetItem",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ActivateSkill",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ActivateSkill",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ActivateSkill",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -61,7 +60,6 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ToggleWeaponInWeapon",Key=F12,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToggleMouse",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Interaction",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="InteractionCancel",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="ForwardAndBackward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="LeftAndRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="ForwardAndBackward",Key=S,Scale=-1.000000)
